bmi calculator area spacing is fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -489,6 +489,7 @@ hr{
     }
     .section-heading{
         width: 100%;
+        padding: 0 0 22px 0;
     }
     .section-title{
         font-size: 2rem;
